--- a/app/src/main/res/layout/activity_crypto.xml
+++ b/app/src/main/res/layout/activity_crypto.xml
@@ -92,7 +92,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Generar numeros aleatorios"
+        android:text="Generar numeros clave"
         android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintEnd_toStartOf="@+id/button20"
         app:layout_constraintStart_toStartOf="parent"
@@ -124,7 +124,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:text="Numeros aleatorios"
+        android:text="Ssecuencia Numeros aleatorios"
         android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText3" />
